# quadlib

./: .travis.yml  CMakeLists.txt  exceptions.h  point.h
cmake/: Doxyfile  documentation.cmake  install.cmake
include/: exceptions.h  point.h  quadrature.h
source/: point.cc  quadrature.cc
test/: .gitignore  CMakeLists.txt  point_1.cc  point_1.output  quadrature.output  quadrature_test.cc  test_test.cpp
